--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,17 +14,18 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.9'
-    
-    - name: Install Buildozer
-      run: pip install buildozer
-    
     - name: Create buildozer.spec
       run: |
         echo '[app]
-title = Мячик Батскетбол
+title = Мячик Баскетбол
 package.name = myachik
 package.domain = com.antoha
 source.dir = .
+source.include_exts = py
+version = 1.0
+requirements = python3,kivy
+orientation = portrait
+android.permissions = INTERNET' > buildozer.spec
 source.include_exts = py
 version = 1.0
 requirements = python3,kivy
